Deploy ready + added sitrep command + added commands list handler

--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
         "admin":"s0_er"
     },
     "messages": {
-        "welcome": "<b>All Commands:</b>\n /all - shows all of the available system metrics\n /sysinfo - shows system info on running machine\n /mem - shows RAM and swap memory load\n /disk - shows '/' disk partition load and write/read data\n /cpu - shows cpu load stats\n /net - shows basic network statistics"
+        "welcome": "Hello from <b>Telemonitor</b>! Your instance now is running, to see all available commands, use /commands"
     }
 }
